Update Qt doc links to Qt 6

--- a/doc/contributing.asciidoc
+++ b/doc/contributing.asciidoc
@@ -231,7 +231,8 @@ Useful websites
 
 Some resources which might be handy:
 
-* https://doc.qt.io/qt-5/classes.html[The Qt5 reference]
+* https://doc.qt.io/qt-6/classes.html[The Qt 6 reference]
+* https://doc.qt.io/qt-5/classes.html[The Qt 5 reference]
 * https://docs.python.org/3/library/index.html[The Python reference]
 * https://httpbin.org/[httpbin, a test service for HTTP requests/responses]
 * https://requestbin.com/[RequestBin, a service to inspect HTTP requests]
@@ -286,7 +287,7 @@ Other
 Languages] (https://www.rfc-editor.org/errata_search.php?rfc=5646[Errata])
 * https://www.w3.org/TR/CSS2/[Cascading Style Sheets Level 2 Revision 1 (CSS
 2.1) Specification]
-* https://doc.qt.io/qt-5/stylesheet-reference.html[Qt Style Sheets Reference]
+* https://doc.qt.io/qt-6/stylesheet-reference.html[Qt Style Sheets Reference]
 * https://mimesniff.spec.whatwg.org/[MIME Sniffing Standard]
 * https://spec.whatwg.org/[WHATWG specifications]
 * https://www.w3.org/html/wg/drafts/html/master/Overview.html[HTML 5.1 Nightly]
@@ -365,7 +366,7 @@ All objects can be printed by starting with the `--debug` flag and using the
 
 The registry is mainly used for <<commands,command handlers>>, but it can
 also be useful in places where using Qt's
-https://doc.qt.io/qt-5/signalsandslots.html[signals and slots] mechanism would
+https://doc.qt.io/qt-6/signalsandslots.html[signals and slots] mechanism would
 be difficult.
 
 Logging
@@ -612,11 +613,14 @@ This is mostly useful for qutebrowser maintainers to work around issues in Qt - 
 The hierarchy of widgets when QtWebEngine is involved looks like this:
 
 - qutebrowser has a `WebEngineTab` object, which is its abstraction over QtWebKit/QtWebEngine.
-- The `WebEngineTab` has a `_widget` attribute, which is the https://doc.qt.io/qt-5/qwebengineview.html[QWebEngineView]
-- That view has a https://doc.qt.io/qt-5/qwebenginepage.html[QWebEnginePage] for everything which doesn't require rendering.
-- The view also has a layout with exactly one element (which also is its `focusProxy()`)
-- That element is the  https://code.qt.io/cgit/qt/qtwebengine.git/tree/src/webenginewidgets/render_widget_host_view_qt_delegate_widget.cpp[RenderWidgetHostViewQtDelegateWidget] (it inherits https://doc.qt.io/qt-5/qquickwidget.html[QQuickWidget]) - also often referred to as RWHV or RWHVQDW. It can be obtained via `sip.cast(tab._widget.focusProxy(), QQuickWidget)`.
-- Calling `rootObject()` on that gives us the https://doc.qt.io/qt-5/qquickitem.html[QQuickItem] where Chromium renders into (?). With it, we can do things like `.setRotation(20)`.
+- The `WebEngineTab` has a `_widget` attribute, which is the https://doc.qt.io/qt-6/qwebengineview.html[QWebEngineView]
+- That view has a https://doc.qt.io/qt-6/qwebenginepage.html[QWebEnginePage] for everything which doesn't require rendering.
+- The view also has a layout with exactly one element (which also is its `focusProxy()`).
+    - Qt 5: That element is the https://code.qt.io/cgit/qt/qtwebengine.git/tree/src/webenginewidgets/render_widget_host_view_qt_delegate_widget.cpp?h=5.15[RenderWidgetHostViewQtDelegateWidget] (it inherits https://doc.qt.io/qt-6/qquickwidget.html[QQuickWidget]) - also often referred to as RWHV or RWHVQDW. 
+      It can be obtained via `sip.cast(tab._widget.focusProxy(), QQuickWidget)`.
+    - Qt 6: That element is the https://code.qt.io/cgit/qt/qtwebengine.git/tree/src/webenginewidgets/api/qwebengineview.cpp[WebEngineQuickWidget] (it inherits https://doc.qt.io/qt-6/qquickwidget.html[QQuickWidget]).
+      It can be obtained via `tab._widget.focusProxy()`.
+- Calling `rootObject()` on that gives us the https://doc.qt.io/qt-6/qquickitem.html[QQuickItem] where Chromium renders into (?). With it, we can do things like `.setRotation(20)`.
 
 Style conventions
 -----------------
