--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2783,6 +2783,7 @@ Valid values:
  * +js-string-replaceall+
  * +js-globalthis+
  * +js-object-fromentries+
+ * +js-array-at+
  * +misc-krunker+
  * +misc-mathml-darkmode+
 
