Add missing setting entry for array-at quirk
(cherry picked from commit 39e577c36eef9892165a6979c403e9b2d9bc239c)

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2781,6 +2781,7 @@ Valid values:
  * +js-string-replaceall+
  * +js-globalthis+
  * +js-object-fromentries+
+ * +js-array-at+
  * +misc-krunker+
  * +misc-mathml-darkmode+
 
