--- a/doc/quickstart.asciidoc
+++ b/doc/quickstart.asciidoc
@@ -62,9 +62,11 @@ qutebrowser's primary maintainer, The-Compiler, is currently working part-time o
 qutebrowser, funded by donations.
 
 To sustain this for a long time, your help is needed! Check the
-https://github.com/sponsors/The-Compiler/[GitHub Sponsors page] for more information.
-Depending on your sign-up date and how long you keep a certain level, you can get
-qutebrowser t-shirts, stickers and more!
+https://github.com/sponsors/The-Compiler/[GitHub Sponsors page] or
+https://github.com/qutebrowser/qutebrowser/blob/master/README.asciidoc#donating[alternative
+donation methods] for more information.  Depending on your sign-up date and how
+long you keep a certain level, you can get qutebrowser t-shirts, stickers and
+more!
 
 Alternatively, there are also various options available for one-time donations, see the
 https://github.com/qutebrowser/qutebrowser/blob/master/README.asciidoc#donating[donation section]
