--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,16 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.5.4]]
+v2.5.4 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- Support SQLite with DQS (double quoted string) compile time option turned
+  off.
+
 [[v2.5.3]]
 v2.5.3 (2023-02-17)
 -------------------
