--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -120,6 +120,16 @@ Fixed
   choose to remove them. Previously they would appear again on navigation.
 - Rare crash when running userscripts with crashed renderer processes.
 
+[[v2.5.4]]
+v2.5.4 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- Support SQLite with DQS (double quoted string) compile time option turned
+  off.
+
 [[v2.5.3]]
 v2.5.3 (2023-02-17)
 -------------------
