--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -254,6 +254,7 @@
 |<<hints.dictionary,hints.dictionary>>|Dictionary file to be used by the word hints.
 |<<hints.find_implementation,hints.find_implementation>>|Which implementation to use to find elements to hint.
 |<<hints.hide_unmatched_rapid_hints,hints.hide_unmatched_rapid_hints>>|Hide unmatched hints in rapid mode.
+|<<hints.labels,hints.labels>>|Labels for hint characters.
 |<<hints.leave_on_load,hints.leave_on_load>>|Leave hint mode when starting a new page load.
 |<<hints.min_chars,hints.min_chars>>|Minimum number of characters used for hint strings.
 |<<hints.mode,hints.mode>>|Mode to use for hints.
@@ -263,7 +264,6 @@
 |<<hints.radius,hints.radius>>|Rounding radius (in pixels) for the edges of hints.
 |<<hints.scatter,hints.scatter>>|Scatter hint key chains (like Vimium) or not (like dwb).
 |<<hints.selectors,hints.selectors>>|CSS selectors used to determine which elements on a page should have hints.
-|<<hints.uppercase,hints.uppercase>>|Make characters in hint strings uppercase.
 |<<history_gap_interval,history_gap_interval>>|Maximum time (in minutes) between two history items for them to be considered being from the same browsing session.
 |<<input.escape_quits_reporter,input.escape_quits_reporter>>|Allow Escape to quit the crash reporter.
 |<<input.forward_unbound_keys,input.forward_unbound_keys>>|Which unbound keys to forward to the webview in normal mode.
@@ -3356,6 +3356,15 @@ Type: <<types,Bool>>
 
 Default: +pass:[true]+
 
+[[hints.labels]]
+=== hints.labels
+Labels for hint characters.
+To replace the deprecated `hints.uppercase` setting set `c.hints.labels = c.hints.chars.upper()` in `config.py`.
+
+Type: <<types,UniqueCharString>>
+
+Default: empty
+
 [[hints.leave_on_load]]
 === hints.leave_on_load
 Leave hint mode when starting a new page load.
@@ -3522,14 +3531,6 @@ Default:
 
 * +pass:[[src\]]+
 * +pass:[[href\]]+
-
-[[hints.uppercase]]
-=== hints.uppercase
-Make characters in hint strings uppercase.
-
-Type: <<types,Bool>>
-
-Default: +pass:[false]+
 
 [[history_gap_interval]]
 === history_gap_interval
