--- a/doc/qutebrowser.1.asciidoc
+++ b/doc/qutebrowser.1.asciidoc
@@ -62,6 +62,9 @@ show it.
 *--backend* '{webkit,webengine}'::
     Which backend to use.
 
+*--qt-wrapper* '{PyQt6,PyQt5}'::
+    Which Qt wrapper to use. This can also be set via the QUTE_QT_WRAPPER environment variable. If both are set, the command line argument takes precedence.
+
 *--desktop-file-name* 'DESKTOP_FILE_NAME'::
     Set the base name of the desktop entry for this application. Used to set the app_id under Wayland. See https://doc.qt.io/qt-6/qguiapplication.html#desktopFileName-prop
 
