Add aria-haspopup to hint selectors
Helps on https://www.keepersecurity.com/ - see https://www.reddit.com/r/qutebrowser/comments/14qtlc8/no_hint_on_drop_down_list/

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -158,6 +158,7 @@ Changed
   `content.site_specific_quirks.skip`, so that `String.replaceAll` is now
   polyfilled on QtWebEngine < 5.15.3, hopefully improving website
   compaitibility.
+- Hints are now displayed for elements setting an `aria-haspopup` attribute.
 
 Fixed
 ~~~~~
